# altex

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  cat_party.py  docker-compose.yml  package-lock.json  package.json  prompts.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
altex/: __init__.py  __main__.py  alt_document.py  cli.py  encoding_fixer.py  latex_parser.py  math_speech.py  models.py  pdf_tagger.py  verapdf.py
benchmarks/: README.md  baseline.json
benchmarks/homework/: ucsd-math184a-hw5.tex
benchmarks/syllabus/: utoledo-math2850.tex
demos/: demo_alt_document.sh  demo_compare.sh  demo_math_alttext.sh  demo_math_speech.sh  demo_tag_all.sh
docs/: design.md  math-speech-and-alt-document.md  pdf-tagging-reference.md  testing.md  tool-audit.md
k8s/: README.md  gke-deploy.sh  gke-setup.sh  gke-teardown.sh
k8s/base/: deployment.yaml  hpa.yaml  service.yaml
k8s/overlays/gcp/: ingress.yaml  kustomization.yaml  managed-cert.yaml
parties/: 001-clean-code.txt  002-party-system.txt  003-readme-reorder.txt
scripts/: benchmark.sh  benchmark_report.py  mathjax_worker.js  run-local.sh  sre_worker.js  update_readme.sh
tests/: __init__.py  conftest.py  test_latex_parser.py  test_models.py  test_web_app.py
web/: __init__.py  app.py
web/static/: index.html
