[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "altex"
version = "0.1.0"
description = "Post-process LaTeX-generated PDFs to embed accessibility tags"
requires-python = ">=3.10"
dependencies = [
    "pikepdf==10.3.0",
    "pymupdf==1.27.1",
    "pylatexenc==2.10",
    "latex2mathml==3.78.1",
    "flask==3.1.3",
    "gunicorn==23.0.0",
    "werkzeug==3.1.6",
]

[project.scripts]
altex = "altex.cli:main"

# Black configuration
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "C901",   # function too complex (dispatch functions are inherently branchy)
]

[tool.ruff.lint.isort]
known-first-party = ["altex"]
required-imports = ["from __future__ import annotations"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "pylatexenc.*",
    "fitz",
    "fitz.*",
    "latex2mathml.*",
    "structlog",
    "structlog.*",
    "pytest",
    "pytest.*",
]
ignore_missing_imports = true
